<resources>
    <string name="app_name">asd</string>
    <string name="txtLogin">Dados de Login</string>
    <string name="txtInputNome">Digite o nome</string>
    <string name="txtInputSenha">Senha</string>
    <string name="txtTermos">Aceito os termos</string>
    <string name="txtBtnStart">Iniciar</string>
    <string name="txtBtnReset">Resetar</string>
    <string name="txtBtnPause">Pause</string>
    <string name="txtBtnGoToTimer">Temporizador</string>
    <string name="txtBtnGoToStopWatch">Cronômetro</string>
    <string name="txt0">00:00:00</string>
    <string name="cronometro">Cronometro</string>
    <string name="txtBtnLogin">Login</string>
</resources>