<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="15dp"
    android:layout_marginRight="15dp"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="190dp"
        android:layout_height="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/txtLogin"
        android:textSize="16sp"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:hint="@string/txtInputNome"
        android:inputType="text"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:hint="@string/txtInputSenha"
        android:inputType="textPassword"
        android:textSize="15sp" />

    <CheckBox
        android:id="@+id/meuCheckBox"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/txtTermos"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtBtnLogin"
        android:textSize="15sp" />
</LinearLayout>