<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="15dp"
    android:layout_marginRight="15dp"
    android:gravity="center"
    tools:context=".Timer"
    >

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/txt0"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="55dp" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:text="@string/txtBtnReset"
        android:layout_marginBottom="10dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:text="@string/txtBtnStart"
        android:layout_marginBottom="10dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnGoToStopWatch"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:text="@string/txtBtnGoToStopWatch"
        android:textSize="15sp" />

</LinearLayout>